// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsCitationView should not fail with missing data 1`] = `
<div>
  <span
    class=" empty"
  />
</div>
`;

exports[`AuthorsCitationView should render a header correctly when all authors are provided 1`] = `
<div>
  <span
    class=""
  >
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-2"
    >
      
      Andersen, J
      
    </span>
    , 
     and 
    <span
      class="citationAuthor"
      data-testid="rek-author-3"
    >
      
      Andersen, J A
      
    </span>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render a header correctly when too many authors are provided 1`] = `
<div>
  <span
    class=""
  >
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    , 
     ... 
    <span
      class="citationAuthor"
      data-testid="rek-author-2"
    >
      
      Andersen, J A
      
    </span>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render a list with ellipsis when elasticsearch cant supply all authors 1`] = `
<div>
  <span
    class=""
  >
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-2"
    >
      
      Andersen, J
      
    </span>
     and 5 more
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 1 author 1`] = `
<div>
  <span
    class=""
  >
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 2 authors 1`] = `
<div>
  <span
    class=""
  >
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    
     and 
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 2 authors for publication view page 1`] = `
<div>
  <span
    class=""
  >
    
    <a
      class=""
      data-testid="rek-author-0-link"
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_author_id%5D%5Bvalue%5D=1&searchQueryParams%5Brek_author_id%5D%5Blabel%5D=1+(Pedroso%2C+Marcelo+Monteiro)&searchMode=advanced"
      style="color: rgb(0, 114, 0);"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Pedroso, Marcelo Monteiro
        
      </span>
    </a>
    
     and 
    <a
      class=""
      data-testid="rek-author-1-link"
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_author_id%5D%5Bvalue%5D=2&searchQueryParams%5Brek_author_id%5D%5Blabel%5D=2+(Smith%2C+J)&searchMode=advanced"
      style="color: rgb(0, 114, 0);"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Smith, J
        
      </span>
    </a>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 2 authors for publication view page if author ids not supplied 1`] = `
<div>
  <span
    class=""
  >
    
    <a
      class="authorNameLink"
      data-testid="rek-author-0-link"
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_author%5D%5Bvalue%5D=Pedroso%2C+Marcelo+Monteiro&searchMode=advanced"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Pedroso, Marcelo Monteiro
        
      </span>
    </a>
    
     and 
    <a
      class="authorNameLink"
      data-testid="rek-author-1-link"
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_author%5D%5Bvalue%5D=Smith%2C+J&searchMode=advanced"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Smith, J
        
      </span>
    </a>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 3 authors 1`] = `
<div>
  <span
    class=""
  >
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    , 
     and 
    <span
      class="citationAuthor"
      data-testid="rek-author-2"
    >
      
      Andersen, J
      
    </span>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 3 authors for publication view page 1`] = `
<div>
  <span
    class=""
  >
    
    <a
      class=""
      data-testid="rek-author-0-link"
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_author_id%5D%5Bvalue%5D=1&searchQueryParams%5Brek_author_id%5D%5Blabel%5D=1+(Pedroso%2C+Marcelo+Monteiro)&searchMode=advanced"
      style="color: rgb(0, 114, 0);"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-0"
      >
        
        Pedroso, Marcelo Monteiro
        
      </span>
    </a>
    , 
    
    <a
      class=""
      data-testid="rek-author-1-link"
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_author_id%5D%5Bvalue%5D=2&searchQueryParams%5Brek_author_id%5D%5Blabel%5D=2+(Smith%2C+J)&searchMode=advanced"
      style="color: rgb(0, 114, 0);"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-1"
      >
        
        Smith, J
        
      </span>
    </a>
    , 
     and 
    <a
      class=""
      data-testid="rek-author-2-link"
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_author_id%5D%5Bvalue%5D=3&searchQueryParams%5Brek_author_id%5D%5Blabel%5D=3+(Smith%2C+J)&searchMode=advanced"
      style="color: rgb(0, 114, 0);"
    >
      <span
        class="citationAuthor"
        data-testid="rek-author-2"
      >
        
        Smith, J
        
      </span>
    </a>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 3 authors with prefix/suffix 1`] = `
<div>
  <span
    class=""
  >
    Authored by: 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    , 
     and 
    <span
      class="citationAuthor"
      data-testid="rek-author-2"
    >
      
      Andersen, J
      
    </span>
    
     people.
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 3 authors with prefix/suffix without changing original data structure 1`] = `
<div>
  <span
    class=""
  >
    Authored by: 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    , 
     and 
    <span
      class="citationAuthor"
      data-testid="rek-author-2"
    >
      
      Andersen, J
      
    </span>
    
     people.
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with 10 authors and show more link 1`] = `
<div>
  <span
    class=""
  >
    Authored by: 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-2"
    >
      
      Andersen, J
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-3"
    >
      
      Andersen, J A
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-4"
    >
      
      Andersen, J B
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-5"
    >
      
      Andersen, J C
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-6"
    >
      
      Andersen, J D
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-7"
    >
      
      Andersen, J E
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-8"
    >
      
      Andersen, J F
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-9"
    >
      
      Andersen, J G
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-10"
    >
      
      Andersen, J H
      
    </span>
    , 
     and 
    <span
      class="citationAuthor"
      data-testid="rek-author-11"
    >
      
      Andersen, J J
      
    </span>
    
     people.
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with exactly 10 authors 1`] = `
<div>
  <span
    class=""
  >
    Authored by: 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-0"
    >
      
      Pedroso, Marcelo Monteiro
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-1"
    >
      
      Smith, J
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-2"
    >
      
      Andersen, J
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-3"
    >
      
      Andersen, J A
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-4"
    >
      
      Andersen, J B
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-5"
    >
      
      Andersen, J C
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-6"
    >
      
      Andersen, J D
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-7"
    >
      
      Andersen, J E
      
    </span>
    , 
    
    <span
      class="citationAuthor"
      data-testid="rek-author-8"
    >
      
      Andersen, J F
      
    </span>
    , 
     and 
    <span
      class="citationAuthor"
      data-testid="rek-author-9"
    >
      
      Andersen, J G
      
    </span>
    
     people.
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with link containing contributor id 1`] = `
<div>
  <span
    class=""
  >
    
    <a
      class=""
      data-testid="rek-contributor-0-link"
      href="/records/search?page=1&pageSize=20&sortBy=score&sortDirection=Desc&searchQueryParams%5Brek_contributor_id%5D%5Bvalue%5D=74066&searchQueryParams%5Brek_contributor_id%5D%5Blabel%5D=74066+(Fitzgerald%2C+Lisa)&searchMode=advanced"
      style="color: rgb(0, 114, 0);"
    >
      <span
        class="citationAuthor"
        data-testid="rek-contributor-0"
      >
        
        Fitzgerald, Lisa
        
      </span>
    </a>
    
     
  </span>
</div>
`;

exports[`AuthorsCitationView should render component with no authors 1`] = `
<div>
  <span
    class=" empty"
  />
</div>
`;

exports[`AuthorsCitationView should set class on component with no authors 1`] = `
<div>
  <span
    class="myClass empty"
  />
</div>
`;
